--- a/template.html
+++ b/template.html
@@ -3,9 +3,9 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <title>Hello Rigo with Vanilla.js</title>
+        <title>Chrome Coverage Converter</title>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"crossorigin="anonymous">
     </head>
     <body>
         <div id="app"></div>
